styling to avoid horizontal scroll in mobile screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -78,18 +78,11 @@ h3 {
   color: #000;
 }
 
-.latest-container {
-  height: 550px;
-  max-width: var(--width);
-  margin-top: 40px;
-  margin: 20px;
-  background-color: var(--light-green);
-}
-
 /* latest post content */
+
 .slider-container {
   margin: 0px auto;
-  width: 90%;
+  width: 100%;
   height: 70%;
   box-sizing: border-box;
 }
@@ -97,9 +90,9 @@ h3 {
 .slides {
   box-sizing: border-box;
   display: flex;
-  width: 100%;
+  width: 800px;
   height: 100%;
-  overflow: hidden;
+  max-width: var(--width);
 }
 
 .form-btn,
@@ -129,15 +122,14 @@ h3 {
   color: var(--dark-green);
 }
 
-.latest-blogpost,
-.slider-content {
-  height: auto;
-  margin: 20px;
-  box-shadow: var(--box-shadow);
-  width: 100%;
-  box-sizing: border-box;
-  padding: 10px;
+.latest-blogpost {
+  justify-content: center;
+  align-items: center;
   background-color: var(--white);
+  box-shadow: var(--box-shadow);
+  margin: 5px;
+  padding: 10px;
+  display: block;
 }
 
 .latest-blogpost h2,
@@ -169,20 +161,19 @@ h3 {
 
 .topic-container {
   display: flex;
-  align-items: center;
-  width: 800px;
-  margin: 60px auto;
-  height: auto;
+  margin-top: 50px;
 }
 
 .topic-logo {
-  margin-right: 20px;
   flex: 0 0 auto;
 }
 
 .topic-logo img {
   height: 200px;
   padding-left: 20px;
+  padding-right: 50px;
+  margin-top: 70px;
+
   width: var(--width);
 }
 
@@ -255,7 +246,6 @@ h3 {
   height: 500px;
   width: 800px;
 }
-
 
 /* Loader */
 .loader {
@@ -391,11 +381,14 @@ textarea {
   padding-left: 100px;
 }
 
+.footer-row-3 {
+  margin: 0 auto;
+}
+
 .footer-row-3 h5 {
-  margin: 0px auto;
-  margin-left: 100px;
-  text-align: center;
-  padding-bottom: 20px;
+  margin: 20px auto;
+  height: 20px;
+  width: var(--width);
 }
 
 .footer-links {
@@ -537,6 +530,7 @@ textarea {
 @media screen and (min-width: 250px) and (max-width: 667px) {
   header {
     width: 100%;
+    max-width: var(--width);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -720,12 +714,18 @@ textarea {
     flex-direction: column;
   }
 
+  .topic-logo {
+    width: 80%;
+    height: 400px;
+    margin: 10px auto;
+    box-sizing: border-box;
+    display: flex;
+  }
+
   .topic-logo img {
     height: auto;
-    width: 100%;
+    width: 400px;
     margin: 40px auto;
-    margin-left: 0px;
-    display: flex;
     margin-bottom: 20px;
   }
 
@@ -831,8 +831,7 @@ textarea {
     padding: 5px;
   }
   .blog-footer h5 {
-    margin: 0px auto;
-    padding: 20px;
+    margin: 50px auto;
   }
 }
 
